# key-hunter

./: .gitignore  Cargo.toml  LICENSE.md  README.md  kernel.cu  kernel.ptx
kernel/: kernel.cu  kernel.cu.txt  kernel.txt  ripemd160.cuh  sha256.cuh
src/: main.rs
workplace/: new_imp.py  permute.py  precompute.py
