
[package]
name = "key-hunter"
version = "0.2.0"
edition = "2021"

[dependencies]
sha2 = "0.10.9"
ripemd = "0.1.3"
bs58 = "0.5.1"
secp256k1 = "0.31.1"
console = "0.16.2"
bitcoin = "0.32.8"
ctrlc = "3.5.1"
rayon = "1.11.0"
lazy_static = "1.5.0"
num_cpus = "1.17.0"
hex = "0.4.3"
csv = "1.4.0"
core_affinity = "0.8.3"
cust = "0.3.2"

# Windows
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
