
[package]
name = "key-hunter"
version = "0.3.0"
edition = "2024"

[dependencies]
secp256k1 = "0.31.1"
ripemd = "0.1.3"
sha2 = "0.10.9"
bs58 = "0.5.1"

console = "0.16.2"
rayon = "1.11.0"
lazy_static = "1.5.0"
num_cpus = "1.17.0"
hex = "0.4.3"
core_affinity = "0.8.3"
cust = "0.3.2"

# Windows
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
